# ChangeLog file for monetdb-java
# This file is updated with Maddlog

* Thu Aug 22 2019 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Improved JdbcClient program by including the schema prefix when dumping
  schema objects. It now behaves more similar to mclient -D -N.
- Improved JdbcClient program. It now also dumps definitions of MERGE TABLE,
  REMOTE TABLE, REPLICA TABLE and STREAM TABLE when dumping all tables.

* Wed Aug 14 2019 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Improved MonetDatabaseMetaData methods:
  - getNumericFunctions(): it now includes functions: code, space and sys.alpha
  - getNumericFunctions(): it no longer lists functions: not_uniques and rotate_xor_hash
  - getStringFunctions(): it now includes functions: json.isarray, json.isobject,
      json.isvalid, sys.reverse which accept a string value as argument
  - getStringFunctions(): it no longer lists functions: copyfrom, get_value_for, next_value_for, restart.
  - getSystemFunctions(): it now includes system functions: get_value_for, hash,
      next_value_for, sys.columnsize, sys.debug, sys.hashsize, sys.heapsize,
      sys.imprintsize, sys.isauuid, sys.md5, sys.newurl, sys.password_hash, isaurl
  - getSystemFunctions(): it no longer lists function: getlimit.
  Also some functions require the prefix "sys." or "json." when used
  from another schema. This is now included in the names returned by
  methods getNumericFunctions(), getStringFunctions(), getSystemFunctions()
  and getTimeDateFunctions().

* Wed Jul 31 2019 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected MonetDatabaseMetaData methods:
  - getNumericFunctions(): it now includes function: pi.
  - getSystemFunctions(): it no longer lists numeric functions: pi and rand.
  - supportsSchemasInIndexDefinitions(): changed from true to false
- Optimised MonetStatement memory resource usage by only creating an ArrayList