@@ -9,7 +9,6 @@
 package nl.cwi.monetdb.util;
 
 import java.io.PrintWriter;
-import java.sql.DatabaseMetaData;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 
@@ -22,7 +21,7 @@ public abstract class Exporter {
 	}
 
 	public abstract void dumpSchema(
-			final DatabaseMetaData dbmd,
+			final java.sql.DatabaseMetaData dbmd,
 			final String type,
 			final String schema,
 			final String name) throws SQLException;
@@ -32,9 +31,10 @@ public abstract class Exporter {
 	public abstract void setProperty(final int type, final int value) throws Exception;
 	public abstract int getProperty(final int type) throws Exception;
 
+
 	//=== shared utilities
 
-	public void useSchemas(final boolean use) {
+	public final void useSchemas(final boolean use) {
 		useSchema = use;
 	}
 
@@ -45,7 +45,7 @@ public abstract class Exporter {
 	 * @param in the string to quote
 	 * @return the quoted string
 	 */
-	protected static String dq(final String in) {
+	protected static final String dq(final String in) {
 		return "\"" + in.replaceAll("\\\\", "\\\\\\\\").replaceAll("\"", "\\\\\"") + "\"";
 	}
 
@@ -56,21 +56,61 @@ public abstract class Exporter {
 	 * @param in the string to quote
 	 * @return the quoted string
 	 */
-	protected static String q(final String in) {
+	protected static final String q(final String in) {
 		return "'" + in.replaceAll("\\\\", "\\\\\\\\").replaceAll("'", "\\\\'") + "'";
 	}
 
 	/**
-	 * Simple helper function to repeat a given character a number of
-	 * times.
+	 * Simple helper function to repeat a given character a number of times.
 	 *
 	 * @param chr the character to repeat
 	 * @param cnt the number of times to repeat chr
 	 * @return a String holding cnt times chr
 	 */
-	protected static String repeat(final char chr, final int cnt) {
+	protected static final String repeat(final char chr, final int cnt) {
 		final char[] buf = new char[cnt];
 		java.util.Arrays.fill(buf, chr);
 		return new String(buf);
+	}
+
+	/**
+	 * Utility method to fetch the "query" value from sys.tables for a specific view or table in a specific schema
+	 * The "query" value contains the original SQL view creation text or the ON clause text when it is a REMOTE TABLE
+	 *
+	 * @param con the JDBC connection, may not be null
+	 * @param schema the schem name, may not be null or empty
+	 * @param name the view or table name, may not be null or empty
+	 * @return the value of the "query" field for the specified view/table name and schema. It can return null.
+	 */
+	protected static final String fetchSysTablesQueryValue(
+		final java.sql.Connection con,
+		final String schema,
+		final String name)
+	{
+		java.sql.Statement stmt = null;
+		ResultSet rs = null;
+		String val = null;
+		try {
+			stmt = con.createStatement();
+			final String cmd = "SELECT query FROM sys.tables WHERE name = '" + name
+				+ "' and schema_id IN (SELECT id FROM sys.schemas WHERE name = '" + schema + "')";
+			rs = stmt.executeQuery(cmd);
+			if (rs != null) {
+				if (rs.next()) {
+					val = rs.getString(1);
+				}
+			}
+		} catch (SQLException se) {
+			/* ignore */
+		} finally {
+			// free resources
+			if (rs != null) {
+				try { rs.close(); } catch (SQLException se) { /* ignore */ }
+			}
+			if (stmt != null) {
+				try { stmt.close(); } catch (SQLException se) { /* ignore */ }
+			}
+		}
+		return val;
 	}
 }
