@@ -1,11 +1,17 @@
 # ChangeLog file for monetdb-java
 # This file is updated with Maddlog
 
+* Wed Sep  4 2019 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
+- Corrected JdbcClient program: the dumping of a view DDL was incorrect when
+  the view creation statement was not starting with "create view ", such as
+  when it was created using "CREATE VIEW" or "create or replace view". It now
+  uses the same DDL text as when it was created, pulled from sys.tables.query.
+
 * Thu Aug 22 2019 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
 - Improved JdbcClient program by including the schema prefix when dumping
-  schema objects. It now behaves more similar to mclient -D -N.
+  schema objects. It now behaves more similar to: mclient -D -N.
 - Improved JdbcClient program. It now also dumps definitions of MERGE TABLE,
-  REMOTE TABLE, REPLICA TABLE and STREAM TABLE when dumping all tables.
+  REMOTE TABLE, REPLICA TABLE and STREAM TABLE when dumping (all) tables.
 
 * Wed Aug 14 2019 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
 - Improved MonetDatabaseMetaData methods:
